added model checkpoint saving

--- a/sac_epipolicy.ipynb
+++ b/sac_epipolicy.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "53144d7f",
    "metadata": {},
    "outputs": [],
@@ -33,10 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "97f5f08f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<string>:3: NumbaTypeSafetyWarning: unsafe cast from int64 to int32. Precision may be lost.\n",
+      "<string>:3: NumbaTypeSafetyWarning: unsafe cast from float64 to float32. Precision may be lost.\n",
+      "<string>:3: NumbaTypeSafetyWarning: unsafe cast from int64 to float32. Precision may be lost.\n"
+     ]
+    }
+   ],
    "source": [
     "json_input = json.loads(warmup_scenario)\n",
     "epi = construct_epidemic(json_input)"
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5fcbea4b",
    "metadata": {},
    "outputs": [],
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "27aea4d2",
    "metadata": {},
    "outputs": [],
@@ -158,7 +168,7 @@
     "        # Define action and observation space\n",
     "        # They must be gym.spaces objects\n",
     "        # Example when using discrete actions:\n",
-    "        self.action_space = spaces.Box(low=0, high=1, shape=(action_count,), dtype=np.float64)\n",
+    "        self.action_space = spaces.Box(low=0, high=1, shape=(action_count,), dtype=np.float32)\n",
     "        # Example for using image as input:\n",
     "        self.observation_space = spaces.Box(low=0, high=total_population, shape=(obs_count,), dtype=np.float64)\n",
     "\n",
@@ -202,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1bf6def2",
    "metadata": {},
    "outputs": [],
@@ -214,10 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "85f53e60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nikunjgupta/work/epipolicy/venv/lib/python3.9/site-packages/stable_baselines3/common/env_checker.py:272: UserWarning: We recommend you to use a symmetric and normalized Box action space (range=[-1, 1]) cf https://stable-baselines3.readthedocs.io/en/master/guide/rl_tips.html\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from stable_baselines3.common.env_checker import check_env\n",
     "check_env(env)"
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c692792b",
    "metadata": {},
    "outputs": [],
@@ -249,19 +268,346 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "87ebc26f",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n",
+      "Logging to ./tensorboard/sac_temp/SAC_6\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -2.41e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 10        |\n",
+      "|    fps             | 102       |\n",
+      "|    time_elapsed    | 5         |\n",
+      "|    total_timesteps | 530       |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -2.12e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 20        |\n",
+      "|    fps             | 102       |\n",
+      "|    time_elapsed    | 10        |\n",
+      "|    total_timesteps | 1060      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 8.17e+06  |\n",
+      "|    critic_loss     | 2.95e+15  |\n",
+      "|    ent_coef        | 1.14      |\n",
+      "|    ent_coef_loss   | -5.74     |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 50        |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.75e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 30        |\n",
+      "|    fps             | 97        |\n",
+      "|    time_elapsed    | 16        |\n",
+      "|    total_timesteps | 1590      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 1.84e+08  |\n",
+      "|    critic_loss     | 1.69e+15  |\n",
+      "|    ent_coef        | 5.6       |\n",
+      "|    ent_coef_loss   | -74.2     |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 580       |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.57e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 40        |\n",
+      "|    fps             | 94        |\n",
+      "|    time_elapsed    | 22        |\n",
+      "|    total_timesteps | 2120      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 3.2e+08   |\n",
+      "|    critic_loss     | 9.52e+15  |\n",
+      "|    ent_coef        | 27.5      |\n",
+      "|    ent_coef_loss   | -143      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 1110      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.46e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 50        |\n",
+      "|    fps             | 92        |\n",
+      "|    time_elapsed    | 28        |\n",
+      "|    total_timesteps | 2650      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 4.26e+08  |\n",
+      "|    critic_loss     | 1.41e+16  |\n",
+      "|    ent_coef        | 135       |\n",
+      "|    ent_coef_loss   | -211      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 1640      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.39e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 60        |\n",
+      "|    fps             | 90        |\n",
+      "|    time_elapsed    | 35        |\n",
+      "|    total_timesteps | 3180      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 5.33e+08  |\n",
+      "|    critic_loss     | 1.39e+16  |\n",
+      "|    ent_coef        | 661       |\n",
+      "|    ent_coef_loss   | -280      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 2170      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.33e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 70        |\n",
+      "|    fps             | 89        |\n",
+      "|    time_elapsed    | 41        |\n",
+      "|    total_timesteps | 3710      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 6.35e+08  |\n",
+      "|    critic_loss     | 2.37e+16  |\n",
+      "|    ent_coef        | 3.24e+03  |\n",
+      "|    ent_coef_loss   | -348      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 2700      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.29e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 80        |\n",
+      "|    fps             | 89        |\n",
+      "|    time_elapsed    | 47        |\n",
+      "|    total_timesteps | 4240      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 7.15e+08  |\n",
+      "|    critic_loss     | 1.62e+16  |\n",
+      "|    ent_coef        | 1.59e+04  |\n",
+      "|    ent_coef_loss   | -417      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 3230      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.26e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 90        |\n",
+      "|    fps             | 88        |\n",
+      "|    time_elapsed    | 53        |\n",
+      "|    total_timesteps | 4770      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 7.68e+08  |\n",
+      "|    critic_loss     | 2.08e+16  |\n",
+      "|    ent_coef        | 7.79e+04  |\n",
+      "|    ent_coef_loss   | -486      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 3760      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.24e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 100       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 60        |\n",
+      "|    total_timesteps | 5300      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 8.69e+08  |\n",
+      "|    critic_loss     | 1.6e+16   |\n",
+      "|    ent_coef        | 3.82e+05  |\n",
+      "|    ent_coef_loss   | -554      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 4290      |\n",
+      "----------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 53       |\n",
+      "|    ep_rew_mean     | -1.1e+09 |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 110      |\n",
+      "|    fps             | 87       |\n",
+      "|    time_elapsed    | 66       |\n",
+      "|    total_timesteps | 5830     |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 1.2e+09  |\n",
+      "|    critic_loss     | 1.34e+16 |\n",
+      "|    ent_coef        | 1.87e+06 |\n",
+      "|    ent_coef_loss   | -622     |\n",
+      "|    learning_rate   | 0.003    |\n",
+      "|    n_updates       | 4820     |\n",
+      "---------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 120       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 72        |\n",
+      "|    total_timesteps | 6360      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 2.78e+09  |\n",
+      "|    critic_loss     | 3.55e+16  |\n",
+      "|    ent_coef        | 9.18e+06  |\n",
+      "|    ent_coef_loss   | -690      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 5350      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 130       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 79        |\n",
+      "|    total_timesteps | 6890      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 1.01e+10  |\n",
+      "|    critic_loss     | 5.94e+17  |\n",
+      "|    ent_coef        | 4.5e+07   |\n",
+      "|    ent_coef_loss   | -760      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 5880      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 140       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 85        |\n",
+      "|    total_timesteps | 7420      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 4.57e+10  |\n",
+      "|    critic_loss     | 1.54e+19  |\n",
+      "|    ent_coef        | 2.21e+08  |\n",
+      "|    ent_coef_loss   | -828      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 6410      |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 150       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 91        |\n",
+      "|    total_timesteps | 7950      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 2.19e+11  |\n",
+      "|    critic_loss     | 2.57e+20  |\n",
+      "|    ent_coef        | 1.08e+09  |\n",
+      "|    ent_coef_loss   | -896      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 6940      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 160       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 97        |\n",
+      "|    total_timesteps | 8480      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 1.03e+12  |\n",
+      "|    critic_loss     | 1.52e+22  |\n",
+      "|    ent_coef        | 5.31e+09  |\n",
+      "|    ent_coef_loss   | -965      |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 7470      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 170       |\n",
+      "|    fps             | 87        |\n",
+      "|    time_elapsed    | 103       |\n",
+      "|    total_timesteps | 9010      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 2.23e+12  |\n",
+      "|    critic_loss     | 1.48e+24  |\n",
+      "|    ent_coef        | 2.6e+10   |\n",
+      "|    ent_coef_loss   | -1.03e+03 |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 8000      |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 53        |\n",
+      "|    ep_rew_mean     | -1.02e+09 |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 180       |\n",
+      "|    fps             | 86        |\n",
+      "|    time_elapsed    | 110       |\n",
+      "|    total_timesteps | 9540      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | 6.63e+12  |\n",
+      "|    critic_loss     | 3.05e+25  |\n",
+      "|    ent_coef        | 1.28e+11  |\n",
+      "|    ent_coef_loss   | -1.1e+03  |\n",
+      "|    learning_rate   | 0.003     |\n",
+      "|    n_updates       | 8530      |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "import numpy as np\n",
     "\n",
     "from stable_baselines3 import SAC\n",
     "\n",
-    "env = gym.make(\"Pendulum-v1\")\n",
+    "# env = gym.make(\"Pendulum-v1\")\n",
+    "\n",
+    "policy_kwargs=dict(activation_fn=torch.nn.ReLU, net_arch=[32, 32]) \n",
     "\n",
     "model = SAC(\n",
     "    policy=\"MlpPolicy\", \n",
@@ -286,7 +632,7 @@
     "    use_sde_at_warmup=False, \n",
     "    tensorboard_log='./tensorboard/sac_temp', \n",
     "    create_eval_env=False, \n",
-    "    policy_kwargs=None, \n",
+    "    policy_kwargs=policy_kwargs, \n",
     "    verbose=1, \n",
     "    seed=config['seed'], \n",
     "    device='auto', \n",
@@ -295,23 +641,23 @@
     "\n",
     "\n",
     "\n",
-    "model.learn(total_timesteps=10000, log_interval=4)\n",
+    "model.learn(total_timesteps=10000, log_interval=10)\n",
     "\n",
     "\n",
-    "model.save(\"sac_epipolicy\")\n",
+    "model.save(\"sac_temp\")\n",
     "\n",
-    "del model # remove to demonstrate saving and loading\n",
+    "# del model # remove to demonstrate saving and loading\n",
     "\n",
-    "model = SAC.load(\"sac_epipolicy\")\n",
+    "# model = SAC.load(\"sac_epipolicy\")\n",
     "\n",
-    "obs = env.reset()\n",
-    "while True: \n",
-    "    action, _states = model.predict(obs, deterministic=True)\n",
-    "    obs, reward, done, info = env.step(action)\n",
-    "    env.render()\n",
-    "    if done:\n",
-    "        obs = env.reset() \n",
-    "        break "
+    "# obs = env.reset()\n",
+    "# while True: \n",
+    "#     action, _states = model.predict(obs, deterministic=True)\n",
+    "#     obs, reward, done, info = env.step(action)\n",
+    "#     env.render()\n",
+    "#     if done:\n",
+    "#         obs = env.reset() \n",
+    "#         break "
    ]
   },
   {
